# AoC2024

./: CMakeLists.txt
include/: day1.h  day2.h  solutions.h  utils.h
inputs/: d15t3  d2t1
src/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  main.cpp  utils.cpp
